# cmake-emlib

./: README.md  gcc_cortex_m.cmake
cmake/Modules/: FindEmLib.cmake
emlib/: CMakeLists.txt  efm32.ld.in
emlib-template/: CMakeLists.txt  main.c
