PROJECT(efm32-template)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_LANGUAGE(ASM)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	"/home/alatar/_DATA_/_OPENSOURCE_/cmake_emlib/cmake/Modules/")

FIND_PACKAGE(EmLib REQUIRED)

EMLIB_SET_CHIP_PARAMS("256K" "32K")
SET(CMAKE_EXE_LINKER_FLAGS
	"${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${CMAKE_PROJECT_NAME}.map")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${EMLIB_INCLUDE_DIR}
    ${EMLIB_FAMILY_INCLUDE_DIR}
)

SET(SOURCES
    main.c
    ${EMLIB_SYSTEM_SOURCE}
)

SET(HEADERS
)

SET(PROJECT_SOURCES ${SOURCES} ${HEADERS})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES} ${EMLIB_STARTUP_SOURCE})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf ${EMLIB_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf
	POST_BUILD COMMAND
	${CMAKE_OBJDUMP} ARGS -S ${CMAKE_PROJECT_NAME}.elf > ${CMAKE_PROJECT_NAME}.lst
)
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf
	POST_BUILD COMMAND
#	${CMAKE_OBJCOPY} ARGS -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex
	${CMAKE_OBJCOPY} ARGS -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin
)

#ADD_CUSTOM_TARGET(hex DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex)
#ADD_CUSTOM_TARGET(bin DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
