PROJECT(emlib)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_LANGUAGE(ASM)

SET(${EMLIB_PREFIX} "")

SET(ALL_MCUS EFM32G EFM32TG EFM32LG EFM32GG EFM32WG EFM32ZG) #add here EFR4D

STRING(TOUPPER "${TARGET_MCU}" TARGET_MCU)
IF(TARGET_MCU STREQUAL "EFM32")
	SET(TARGET_MCU ${ALL_MCUS})
ENDIF()
IF(TARGET_MCU)
	MESSAGE(STATUS "Building for ${TARGET_MCU}")
ELSE()
	MESSAGE(STATUS "No TARGET_MCU specified, building for all MCUs")
	SET(TARGET_MCU ${ALL_MCUS})
ENDIF()

IF(NOT EMLIB_DIR)
	SET(EMLIB_DIR "/opt/energymicro")
	MESSAGE(STATUS "No EMLIB_DIR specified, using default: " ${EMLIB_DIR})
ENDIF()

FOREACH(TMP_TARGET ${TARGET_MCU})
	STRING(TOLOWER "${TMP_TARGET}" TMP_TARGET_L)
	STRING(TOUPPER "${TMP_TARGET}" TMP_TARGET_U)

	STRING(REGEX MATCH "^[A-Z]+[0-9]+[A-Z]+[0-9]+F[0-9]+$"		MCU_CHIP	${TMP_TARGET_U})
	IF(MCU_CHIP)
		STRING(REGEX MATCH "^[A-Z]+[0-9]+[A-Z]+[0-9]+"		MCU_SUBFAMILY	${TMP_TARGET_U})
	ELSE()
		STRING(REGEX MATCH "^[A-Z]+[0-9]+[A-Z]+[0-9]+$"		MCU_SUBFAMILY	${TMP_TARGET_U})
	ENDIF()
	IF(MCU_SUBFAMILY)
		STRING(REGEX MATCH "^[A-Z]+[0-9]+[A-Z]+"		MCU_FAMILY	${TMP_TARGET_U})
	ELSE()
		STRING(REGEX MATCH "^[A-Z]+[0-9]+[A-Z]+$"		MCU_FAMILY	${TMP_TARGET_U})
	ENDIF()
	IF(MCU_FAMILY)
		SET(EM_MCU_FAMILY_LIST ${EM_MCU_FAMILY_LIST} ${MCU_FAMILY})
	ELSE()
		MESSAGE(FATAL_ERROR "Not Valid MCU: ${TMP_TARGET_U}")
	ENDIF()

	STRING(TOLOWER "${MCU_FAMILY}" EM_MCU_FAMILY_L)
	STRING(TOUPPER "${MCU_FAMILY}" EM_MCU_FAMILY_U)

	FILE(GLOB TMP_HEADERS  ${EMLIB_DIR}/Device/EnergyMicro/${EM_MCU_FAMILY_U}/Include/*.h)
	FOREACH(TMP_HEADER ${TMP_HEADERS})
		STRING(REGEX REPLACE ".*/(.+[0-9]+.+[0-9]+.+[0-9]+)\\.h$" "\\1" TMP_MCU ${TMP_HEADER})
		IF(TMP_MCU STREQUAL ${TMP_HEADER})
			SET(LIB_${EM_MCU_FAMILY_U}_HEADERS ${LIB_${EM_MCU_FAMILY_U}_HEADERS} ${TMP_HEADER})
		ELSE()
			STRING(TOUPPER "${TMP_MCU}" TMP_MCU_U)

			IF(MCU_CHIP)
				IF(TMP_MCU_U STREQUAL ${MCU_CHIP})
					SET(MCU_${EM_MCU_FAMILY_U}_LIST ${MCU_${EM_MCU_FAMILY_U}_LIST} ${TMP_MCU_U})
				ENDIF()
			ELSEIF(MCU_SUBFAMILY)
				STRING(REGEX MATCH "^[A-Z]+[0-9]+[A-Z]+[0-9]+" CUR_MCU_SUBFAMILY ${TMP_MCU_U})
				IF(CUR_MCU_SUBFAMILY STREQUAL ${MCU_SUBFAMILY})
					SET(MCU_${EM_MCU_FAMILY_U}_LIST ${MCU_${EM_MCU_FAMILY_U}_LIST} ${TMP_MCU_U})
				ENDIF()
			ELSE()
				SET(MCU_${EM_MCU_FAMILY_U}_LIST ${MCU_${EM_MCU_FAMILY_U}_LIST} ${TMP_MCU_U})
			ENDIF()
		ENDIF()
	ENDFOREACH(TMP_HEADER)


	IF(MCU_CHIP)
		SET(MCU_${EM_MCU_FAMILY_U}_LIST ${MCU_${EM_MCU_FAMILY_U}_LIST} ${MCU_CHIP})
	ENDIF()

ENDFOREACH(TMP_TARGET)

IF(NOT EM_MCU_FAMILY_LIST)
	MESSAGE(FATAL_ERROR "Nothing to build")
ENDIF()

LIST(REMOVE_DUPLICATES EM_MCU_FAMILY_LIST)

FOREACH(EM_MCU_FAMILY ${EM_MCU_FAMILY_LIST})
	STRING(TOLOWER "${EM_MCU_FAMILY}" EM_MCU_FAMILY_L)
	STRING(TOUPPER "${EM_MCU_FAMILY}" EM_MCU_FAMILY_U)

	LIST(REMOVE_DUPLICATES MCU_${EM_MCU_FAMILY_U}_LIST)
	LIST(REMOVE_DUPLICATES LIB_${EM_MCU_FAMILY_U}_HEADERS)
	IF(MCU_${EM_MCU_FAMILY_U}_LIST)
		MESSAGE(STATUS "Schedulled to build in family ${EM_MCU_FAMILY_U}: ${MCU_${EM_MCU_FAMILY_U}_LIST}")
	ELSE()
		MESSAGE(FATAL_ERROR "Nothing to build for ${EM_MCU_FAMILY_U}")
	ENDIF()
ENDFOREACH(EM_MCU_FAMILY)

INCLUDE_DIRECTORIES(
	${EMLIB_DIR}/CMSIS/Include
	${EMLIB_DIR}/emlib/inc
)
SET(EM_CMSIS_HEADERS
	${EMLIB_DIR}/CMSIS/Include/core_cmFunc.h
	${EMLIB_DIR}/CMSIS/Include/core_cmInstr.h
)

FILE(GLOB EMLIB_SOURCES ${EMLIB_DIR}/emlib/src/*.c)
FILE(GLOB EMLIB_HEADERS ${EMLIB_DIR}/emlib/inc/*.h)

IF(USE_M0P STREQUAL "YES")
	SET(EM_CMSIS_HEADERS
		${EM_CMSIS_HEADERS}
		${EMLIB_DIR}/CMSIS/Include/core_cm0plus.h
	)
ENDIF()
IF(USE_M3 STREQUAL "YES")
	SET(EM_CMSIS_HEADERS
		${EM_CMSIS_HEADERS}
		${EMLIB_DIR}/CMSIS/Include/core_cm3.h
	)
ENDIF()
IF(USE_M4 STREQUAL "YES")
	SET(EM_CMSIS_HEADERS
		${EM_CMSIS_HEADERS}
		${EMLIB_DIR}/CMSIS/Include/core_cm4.h
		${EMLIB_DIR}/CMSIS/Include/core_cm4_simd.h
	)
ENDIF()

FOREACH(EM_MCU_FAMILY ${EM_MCU_FAMILY_LIST})
	STRING(TOLOWER "${EM_MCU_FAMILY}" EM_MCU_FAMILY_L)
	STRING(TOUPPER "${EM_MCU_FAMILY}" EM_MCU_FAMILY_U)

	IF(EM_MCU_FAMILY_U STREQUAL "EFM32ZG")
#		SET(TARGET_CORE "m0plus")	#if supported by toolchain
		SET(TARGET_CORE "m0")		#for CodeSourcery
		SET(USE_M0P "YES")
	ELSEIF(EM_MCU_FAMILY_U STREQUAL "EFM32WG")
		SET(TARGET_CORE "m4")
		SET(USE_M4 "YES")
	ELSE()
		SET(TARGET_CORE "m3")
		SET(USE_M3 "YES")
	ENDIF()

	FOREACH(TMP_PART ${MCU_${EM_MCU_FAMILY_U}_LIST})
		STRING(TOLOWER "${TMP_PART}" TMP_PART_L)
		STRING(TOUPPER "${TMP_PART}" TMP_PART_U)

		ADD_LIBRARY(${EMLIB_PREFIX}${TMP_PART_L} ${EMLIB_SOURCES} ${EMLIB_HEADERS}  ${EMLIB_DIR}/Device/EnergyMicro/${EM_MCU_FAMILY_U}/Include/${TMP_PART_L}.h)
		SET_TARGET_PROPERTIES(${EMLIB_PREFIX}${TMP_PART_L} PROPERTIES COMPILE_FLAGS "-mcpu=cortex-${TARGET_CORE} -D${TMP_PART_U}")
		GET_TARGET_PROPERTY(TARGET_INCLUDE_DIRS ${EMLIB_PREFIX}${TMP_PART_L} INCLUDE_DIRECTORIES)
		SET_TARGET_PROPERTIES(${EMLIB_PREFIX}${TMP_PART_L} PROPERTIES INCLUDE_DIRECTORIES "${TARGET_INCLUDE_DIRS};${EMLIB_DIR}/Device/EnergyMicro/${EM_MCU_FAMILY_U}/Include")
		SET(EMLIB_TARGETS ${EMLIB_TARGETS} ${EMLIB_PREFIX}${TMP_PART_L})

	ENDFOREACH(TMP_PART)
ENDFOREACH(EM_MCU_FAMILY)


#IF(USE_ASSERT)
#    ADD_DEFINITIONS("-D\"assert_param(expr)\"=\"((expr) ? (void)0 : assert_failed((uint8_t *)__FILE__, __LINE__))\"")
#ELSE()
#    ADD_DEFINITIONS("-D\"assert_param(expr)\"=\"((void)0)\"")
#ENDIF()

INSTALL(TARGETS ${EMLIB_TARGETS}
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

INSTALL(FILES
	${EM_CMSIS_HEADERS}
	${EMLIB_HEADERS}
	DESTINATION
	include/emlib
)


FOREACH(EM_MCU_FAMILY ${EM_MCU_FAMILY_LIST})
	STRING(TOLOWER "${EM_MCU_FAMILY}" EM_MCU_FAMILY_L)
	STRING(TOUPPER "${EM_MCU_FAMILY}" EM_MCU_FAMILY_U)

	SET(EM_SYSTEMS ${EM_SYSTEMS}
		${EMLIB_DIR}/Device/EnergyMicro/${EM_MCU_FAMILY_U}/Source/system_${EM_MCU_FAMILY_L}.c
	)
	SET(EM_STARTUPS ${EM_STARTUPS}
		${EMLIB_DIR}/Device/EnergyMicro/${EM_MCU_FAMILY_U}/Source/G++/startup_${EM_MCU_FAMILY_L}.s
	)

	INSTALL(FILES
		${LIB_${EM_MCU_FAMILY_U}_HEADERS}
		DESTINATION
		include/emlib/${EM_MCU_FAMILY_U}
	)

	FOREACH(TMP_PART ${MCU_${EM_MCU_FAMILY_U}_LIST})
		STRING(TOLOWER "${TMP_PART}" TMP_PART_L)
		STRING(TOUPPER "${TMP_PART}" TMP_PART_U)
		INSTALL(FILES
			${EMLIB_DIR}/Device/EnergyMicro/${EM_MCU_FAMILY_U}/Include/${TMP_PART_L}.h
			DESTINATION
			include/emlib/${EM_MCU_FAMILY_U}
		)
	ENDFOREACH(TMP_PART)
ENDFOREACH(EM_MCU_FAMILY)


INSTALL(FILES
	${EM_SYSTEMS}
	${EM_STARTUPS}
	${CMAKE_CURRENT_SOURCE_DIR}/efm32.ld.in
	DESTINATION
	share/emlib/
)
